feat(api): Implement dynamic localized detail messages and structured properties in ProblemDetails